# minecraft-text-components

./: LICENSE  README.md  pyproject.toml  test.py  test0.py
data/: legacy_unicode_advances.json
minecraft_text_components/: __init__.py  alignment.py  columns.py  container.py  flat.py  formatting.py  helpers.py  join.py  overlap.py  pad_each_line.py  prevent_inheritance.py  split.py  style.py  trim.py  types.py  whitespace.py  wrap.py
minecraft_text_components/advances/: __init__.py  get_advance.py  get_char_advance.py  get_line_advance.py
minecraft_text_components/contrib/: beet_minify.py  minify_json_plugin.py
minecraft_text_components/minify/: __init__.py  factor_common_formatting.py  merged.py  minify.py  reduce.py
minecraft_text_components/resources/: advances.json
scripts/: generate_advances.py
src/: alignment.py  center.py  columns.py  container.py  flat.py  formatting.py  join.py  js_str.py  json_number.py  jsstr.py  overlap.py  pad_each_line.py  regex.py  split.py  string.py  style.py  trim.py  types.py  whitespace.py  wrap.py
src/advances/: get_advance.py  get_char_advance.py  get_code_point_advance.py  get_line_advance.py  get_single_line_advance.py
src/minify/: disable_inheritance_if_necessary.py  factor_common_formatting.py  merged.py  minify.py  reduce.py  reduced.py
