[tool.poetry]
name = "minecraft-text-components"
version = "1.0.0"
description = "A library for manipulating Minecraft's raw JSON text components"
authors = ["VanillaTweaks <team@vanillatweaks.net>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
requests = "^2.27.1"
Pillow = "^9.1.0"
typing-extensions = "^4.2.0"

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
