[tool.poetry]
name = "minecraft-text-components"
version = "1.0.2"
description = "A library for manipulating Minecraft's raw JSON text components"
license = "MIT"
authors = ["VanillaTweaks <team@vanillatweaks.net>"]
readme = "README.md"
homepage = "https://github.com/VanillaTweaks/minecraft-text-components"
repository = "https://github.com/VanillaTweaks/minecraft-text-components"
documentation = "https://github.com/VanillaTweaks/minecraft-text-components"
keywords = [
    "minecraft",
    "pack",
    "data",
    "datapack",
    "resource",
    "resourcepack",
    "raw",
    "json",
    "text",
    "components",
]

[tool.poetry.dependencies]
python = "^3.10"
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
requests = "^2.27.1"
Pillow = "^9.1.0"

[tool.pyright]
typeCheckingMode = "strict"
reportImportCycles = false

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
